# whisper-api-queue

./: .pre-commit-config.yaml  Dockerfile.dummy  Dockerfile.server  Dockerfile.worker  README.md  docker-compose.yaml  pyproject.toml
dummy/: dummy.py
scripts/: test_request.sh
server/: app.py
server/tests_server/: conftest.py  test_api.py
transcriber/: Dockerfile  pyproject.toml
worker/: exceptions.py  load_model.py  main.py  services.py  tasks.py
worker/tests/: test_tasks.py
worker/tests_worker/: conftest.py  test_services.py  test_tasks.py
worker/tests_worker/transcribers/: test_openai_whisper.py
worker/transcribers/: __init__.py  base.py  openai_whisper.py  whisper.py
