[tool.poetry]
name = "whisper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.worker.dependencies]
openai-whisper = "^20230314"
celery = "^5.3.1"
torch = "2.0.0"  # whisper doesn't launch with the latest 2.0.1
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
mypy = "^1.4.1"
ruff = "^0.0.280"
isort = "^5.12.0"
responses = "^0.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
